--- a/app.yaml
+++ b/app.yaml
@@ -2,11 +2,13 @@ runtime: python37
 
 service: default
 
+entrypoint: gunicorn app:app -b :8080
+
 handlers:
   # This configures Google App Engine to serve the files in the app's static
   # directory.
 - url: /static
-  static_dir: inference_demo/static
+  static_dir: app/static
 
   # This handler routes all requests not caught above to your main app. It is
   # required when static routes are defined, but can be omitted (along with
