--- a/app.yaml
+++ b/app.yaml
@@ -2,16 +2,16 @@ runtime: python37
 
 service: default
 
-entrypoint: gunicorn app:app -b :8080
+entrypoint: gunicorn app:app -b :$PORT
 
+# URL handlers
 handlers:
-  # This configures Google App Engine to serve the files in the app's static
-  # directory.
+  # Static files
 - url: /static
   static_dir: app/static
 
-  # This handler routes all requests not caught above to your main app. It is
-  # required when static routes are defined, but can be omitted (along with
-  # the entire handlers section) when there are no static files defined.
+  # Direct to main app
 - url: /.*
   script: auto
+
+
