use google services instead of local bindings, implement secret manager

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,11 @@ commands=
 
 [testenv:py37]
 deps = -r requirements_dev.txt
+setenv = 
+  GOOGLE_APPLICATION_CREDENTIALS=gcloud_credential/census-impute-d47bc435f1d0.json
 commands = 
     coverage run -m pytest --durations 0
+
     
 [testenv:stats]
 deps = coverage
