--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -15,3 +15,9 @@ pytest
 
 #Dev tensorflow binding
 tensorflow
+
+#Google specific
+google-python-cloud-debugger
+google-cloud-storage
+google-api-python-client
+google-cloud-secret-manager
