chore: moved pytest.ini into tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,11 @@ ignore =
   F401
   E402
 
+[pytest]
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::FutureWarning
+    
 [testenv:clean]
 deps = coverage
 commands=
