chore: moved .coveragerc into tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,31 @@ ignore =
   F401
   E402
 
+[coverage:run]
+branch=True
+omit =
+    src/imputationflask/test/*
+include = 
+    src/imputationflask/*
+
+[coverage:report]
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain about missing debug-only code:
+    def __repr__
+    if self\.debug
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
+    raise NotImplementedError
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if __name__ == .__main__.:
+
 [pytest]
 filterwarnings =
     ignore::DeprecationWarning
@@ -25,7 +50,6 @@ setenv =
   GOOGLE_APPLICATION_CREDENTIALS=gcloud_credential/census-impute-d47bc435f1d0.json
 commands = 
     coverage run -m pytest --flake8 --durations 0 --html=test_reports/pytest.html
-
     
 [testenv:stats]
 deps = coverage
