test: added debug test environemnt to tox

--- a/tox.ini
+++ b/tox.ini
@@ -55,3 +55,12 @@ commands =
 deps = coverage
 commands=
   coverage report -m
+
+[testenv:debug]
+deps = 
+  -r requirements.txt
+  -r requirements_test.txt
+setenv = 
+  GOOGLE_APPLICATION_CREDENTIALS=gcloud_credential/census-impute-d47bc435f1d0.json
+commands = 
+    pytest --pdb
