--- a/tox.ini
+++ b/tox.ini
@@ -45,9 +45,14 @@ commands=
 [testenv:py37]
 deps = 
   -r requirements.txt
-  -r requirements_test.txt
+  coverage
+  pytest
+  pytest-flake8
+  pytest-html
+
 setenv = 
   GOOGLE_APPLICATION_CREDENTIALS=gcloud_credential/census-impute-d47bc435f1d0.json
+  PYTHONPATH=src
 commands = 
     coverage run -m pytest --flake8 --durations 0 --html=test_reports/pytest.html
     
@@ -59,8 +64,12 @@ commands=
 [testenv:debug]
 deps = 
   -r requirements.txt
-  -r requirements_test.txt
+  coverage
+  pytest
+  pytest-flake8
+  pytest-html
 setenv = 
   GOOGLE_APPLICATION_CREDENTIALS=gcloud_credential/census-impute-d47bc435f1d0.json
+  PYTHONPATH=src
 commands = 
     pytest --pdb
